--- a/common/pom.xml
+++ b/common/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--<java.version>1.8</java.version>-->
         <spring.version>4.1.7.RELEASE</spring.version>
         <mybatis.version>3.2.7</mybatis.version>
         <mybatis-spring.version>1.2.3</mybatis-spring.version>
@@ -153,5 +154,5 @@
             <version>1.2</version>
         </dependency>
     </dependencies>
-    
+
 </project>
