--- a/cms/pom.xml
+++ b/cms/pom.xml
@@ -18,7 +18,8 @@
 
     <modules>
         <module>cms-dao</module>
-        <module>cms-dao</module>
+        <module>cms-service</module>
+        
     </modules>
     
 </project>
